Initial structure planning

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -15,3 +15,9 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+jacobliu:
+  name: Yunzhi (Jacob) Liu
+  title: Website maintainer
+  url: https://github.com/JacobLiu001
+  image_url: https://github.com/JacobLiu001.png
